--- a/style2.css
+++ b/style2.css
@@ -65,50 +65,13 @@ header a:hover {
 .active {
     color: tomato;
 }
-/*
-@media only screen and (max-width: 800px) {
-    header ul {
-        flex-direction: row;
-        justify-content: space-between;
-    }
-    section > div {
-        grid-template-columns: 1fr 1fr 1fr;
-    }
-}
 
-@media only screen and (max-width: 600px) {
-
-    header h1{
-        margin-left: 0;
-        text-align: center;
-    }
-
-    header ul{
-        flex-direction: column;
-        align-items: center;
-    }
-
-    header a {
-        font-size: 28px;
-    }
-
-    section > h2 {
-        text-align: center;
-    }
-
-    section > div {
-        grid-template-columns: 1fr 1fr 1fr;
-        align-items: stretch;
-    }
-
-}
-*/
 main {
     flex:1;
     margin: 3rem 3rem 3rem 3rem;
 }
 
-.block_order {
+section > div {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 10px;
@@ -194,7 +157,7 @@ footer p {
         justify-content: space-between;
     }
     section > div {
-        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
     }
 }
 
@@ -223,10 +186,8 @@ footer p {
     }
 
     section > div {
-        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-columns: 1fr;
         align-items: stretch;
-
-        overflow: auto;
     }
 
 }
